fixed address icon in footer and misalignment

--- a/modules/Layout/Boilerplate/Boilerplate.module.scss
+++ b/modules/Layout/Boilerplate/Boilerplate.module.scss
@@ -54,10 +54,12 @@
     @include text-label;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     .icon {
         margin-right: $spacing-1;
+        min-width: $spacing-3;
+        min-height: $spacing-3;
     }
 }
 
